# thopper

./: .replit  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--I-made-two-categories-of-updates-to-the-Anachron-Pytho_1767145599794.txt  Pasted-Ending-System-Debug-Anchor-Values-Event-Callbacks-Not-F_1767370425230.txt  README_1766602037895.md  README_1766616242455.md  config_1766616242449.py  config_1767119286279.py  eras_1766602037893.py  eras_1767145571482.py  fulfillment_1766616242452.py  game_1767119286280.py  game_1767145571483.py  game_api_(1)_1767159641888.py  game_api_(2)_1767161162383.py  game_api_(3)_1767163337028.py  game_api_1767145571483.py  game_history_1766616242453.json  game_state_1767145571484.py  items_1766616242454.py  items_1767119286281.py  leaderboard_1766616242454.json  prompts_(4)_1767263278600.py  prompts_1766616242455.py  prompts_1767119286282.py  prompts_1767155533395.py  scoring_1766602037895.py  scoring_1766616242456.py  scoring_1767163337027.py  time_machine_1766602037896.py  time_machine_1766616242457.py
client/src/: App.tsx
client/src/pages/: chronicle-nexus.tsx  home-v2.tsx  (+1 more)
game/: config.py  db_storage.py  eras.py  fulfillment.py  game.py  game_api.py  game_history.json  game_state.py  items.py  leaderboard.json  prompts.py  scoring.py  server.py
game/saves/: 40484842_20251231_043310.json  40484842_20251231_070834.json
script/: build.ts
scripts/: dev.sh
server/: admin-routes.ts  index.ts  pty.ts  routes.ts  storage.ts
shared/: schema.ts
shared/models/: game.ts
(+6 files in other folders)
