[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "gevent>=25.9.1",
    "gevent-websocket>=0.10.1",
    "requests>=2.32.5",
    "simple-websocket>=1.1.0",
]
